--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "name": "backend",
+    "version": "1.0.0",
+    "main": "app.js",
+    "scripts": {
+        "dev": "node app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "keywords": [],
+    "description": ""
 }
