--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,9 @@
     "author": "",
     "license": "ISC",
     "keywords": [],
-    "description": ""
+    "description": "",
+    "dependencies": {
+        "dotenv": "^16.4.7",
+        "mysql": "^2.18.1"
+    }
 }
